<?xml version="1.0"?>
<package format="2">
  <name>mark_sim</name>
  <version>0.0.1</version>
  <description>The mark_sim package</description>

  <maintainer email="markdole@outlook.com">ma</maintainer>
  <url type="website">http://github</url>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>costmap_2d</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_core</depend>
  <depend>nav_msgs</depend>
  <depend>navfn</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>tf2_ros</depend>

  <export>

  </export>
</package>
